Reworking to allow others to leverage a fully configured Jersey Client