@@ -1,9 +1,23 @@
 configure(allprojects) {
-    apply plugin: 'eclipse'
     apply plugin: 'idea'
     apply plugin: 'maven'
 
+    version = '2.2-SNAPSHOT'
     group = "net.davidbuccola.${rootProject.name}"
+
+    // Symbolic versions for select dependencies. The version of most dependencies is specified inline with the
+    // dependency declaration. However, for certain artifact groups that have multiple artifacts or that show up often
+    // the version is specified symbolically here to simplify maintenance.
+
+    ext {
+        gradleVersion = '1.4'
+        jacksonVersion = '1.9.2'
+        jerseyVersion = '1.12'
+        junitVersion = '4.8.2'
+        logbackVersion = '1.0.7'
+        slf4jVersion = '1.6.6'
+        springVersion = '3.0.5.RELEASE'
+    }
 
     repositories {
         mavenCentral()
@@ -20,10 +34,10 @@ configure(rootProject) {
                 withXml { provider ->
                     provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
 
-                    def gradleSettings = node.appendNode('component', [name: 'GradleSettings'])
-                    gradleSettings.appendNode('option', [name: 'SDK_HOME', value: gradle.gradleHomeDir.absolutePath])
+                    def gradleSettings = getFreshIprComponent(provider.node, 'GradleSettings')
+                    gradleSettings.appendNode('option', [name: 'gradleHome', value: gradle.gradleHomeDir.absolutePath])
 
-                    def javacSettings = node.appendNode('component', [name: 'JavacSettings'])
+                    def javacSettings = getFreshIprComponent(provider.node, 'JavacSettings')
                     javacSettings.appendNode('option', [name: 'MAXIMUM_HEAP_SIZE', value: "256"])
                 }
             }
@@ -32,6 +46,7 @@ configure(rootProject) {
 }
 
 configure(subprojects) {
+    apply plugin: 'eclipse'
     apply plugin: 'java'
     apply plugin: 'osgi'
 
@@ -151,6 +166,7 @@ configure(subprojects) {
         checkstyle {
             sourceSets = [sourceSets.main]
             configFile = file("$rootProject.projectDir/config/checkstyle/checkstyle.xml")
+            toolVersion = 5.6
         }
 
         findbugs {
@@ -209,5 +225,30 @@ def customizePom(pom, gradleProject) {
  */
 task wrapper(type: Wrapper) {
     description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = project.hasProperty('gradleVersion') ? project.gradleVersion : '1.3'
+
+    gradleVersion = project.gradleVersion
+
+    // Establish the default memory settings for the gradle wrappers. These settings can still be overridden in the
+    // environment with GRADLE_OPTS or JAVA_OPTS if desired. Note that you should avoid use of -Xms here because it has
+    // a tendency to not play well with other settings in the environment if they exist.
+    doLast() {
+        def defaultJvmOpts = "-XX:MaxPermSize=128m -Xmx512m"
+        File wrapperFile = file('gradlew')
+        wrapperFile.text = wrapperFile.text.replace("DEFAULT_JVM_OPTS=\"\"", "DEFAULT_JVM_OPTS=\"$defaultJvmOpts\"")
+        File wrapperBatFile = file('gradlew.bat')
+        wrapperBatFile.text = wrapperBatFile.text.replace("set DEFAULT_JVM_OPTS=", "set DEFAULT_JVM_OPTS=$defaultJvmOpts")
+    }
 }
+
+/**
+ * Returns a brand new Ipr component node with no children. If an existing component node is found it is removed along
+ * with all of its children and a fresh one is created.
+ */
+def getFreshIprComponent(Node projectNode, String componentName) {
+    Node existingComponent = (Node) projectNode.component.find { it.@name == componentName }
+    if (existingComponent) {
+        projectNode.remove(existingComponent)
+    }
+    return projectNode.appendNode('component', [name: componentName])
+}
+
